--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             padding: 5px 10px;
             color: #333;
             border-radius: 8px;
-            background-color: rgba(255, 255, 255, 0.6);
+            background-color: rgba(255, 255, 255, 0.1);
             display: flex;
             flex-direction: column;
             /* Stack time and date */
@@ -716,7 +716,7 @@
         <div class="taskbar">
             <div class="taskbar-left">
                 <div class="start-button">
-                    <i class="fas fa-windows"></i>
+                    <i class="fa-brands fa-windows"></i>
                     <!-- Start Menu -->
                     <div class="start-menu" id="start-menu">
                         <div class="start-menu-option" id="restart-option">Restart</div>
@@ -728,20 +728,17 @@
                     <input type="text" placeholder="Search..." id="search-input">
                 </div>
                 <div class="taskbar-icons">
-                    <div class="taskbar-icon" data-window="resume-window">
-                        <i class="fas fa-file-alt"></i>
+                    <div class="taskbar-icon" id="magicButton">
+                        <i class="fa-solid fa-wand-magic-sparkles"></i>
                     </div>
-                    <div class="taskbar-icon" data-window="linkedin-window">
-                        <i class="fab fa-linkedin"></i>
+                    <div class="taskbar-icon" id="rsaButton">
+                        <i class="fa-solid fa-fingerprint"></i>
                     </div>
-                    <div class="taskbar-icon" data-window="github-window">
-                        <i class="fab fa-github"></i>
+                    <div class="taskbar-icon" id="sundialButton">
+                        <i class="fa-regular fa-clock"></i>
                     </div>
-                    <div class="taskbar-icon" data-window="terminal-window">
-                        <i class="fas fa-terminal"></i>
-                    </div>
-                    <div class="taskbar-icon" data-window="bing-window">
-                        <i class="fab fa-microsoft"></i>
+                    <div class="taskbar-icon" id="fontButton">
+                        <i class="fa-solid fa-signature"></i>
                     </div>
                     <!-- Add more taskbar icons here -->
                 </div>
@@ -1363,6 +1360,18 @@
                 });
             });
 
+            document.getElementById("magicButton").addEventListener('click', () => {
+                openNewTab("https://aarushmagic.com")
+            })
+            document.getElementById("rsaButton").addEventListener('click', () => {
+                openNewTab("https://rsa.aarushmagic.com/preview")
+            })
+            document.getElementById("sundialButton").addEventListener('click', () => {
+                openNewTab("https://sundial.aarushmagic.com/make/two")
+            })
+            document.getElementById("fontButton").addEventListener('click', () => {
+                openNewTab("https://fonts.aarushmagic.com")
+            })
             taskbarIcons.forEach(icon => { // Add click functionality to taskbar icons
                 icon.addEventListener('click', () => {
                     const windowId = icon.getAttribute('data-window');
@@ -1522,15 +1531,15 @@
                     // Search LinkedIn, GitHub, Awards, Certifications (rest of your search logic - keep all of it) ...
                     const linkedinContent = document.getElementById('linkedin-window').querySelector('.window-content').textContent.toLowerCase();
                     if (linkedinContent.includes(searchTerm) || "linkedin".includes(searchTerm)) {
-                        document.getElementById('linkedin-window').style.display = 'flex';
-                        document.getElementById('linkedin-window').style.zIndex = currentZIndex++;
+                        openNewTab("https://www.linkedin.com/in/aarush-lanjharia-065216228/")
+                        document.getElementById("linkedin-window").style.display = 'none';
                         foundMatch = true;
                     }
 
                     const githubContent = document.getElementById('github-window').querySelector('.window-content').textContent.toLowerCase();
                     if (githubContent.includes(searchTerm) || "github".includes(searchTerm)) {
-                        document.getElementById('github-window').style.display = 'flex';
-                        document.getElementById('github-window').style.zIndex = currentZIndex++;
+                        openNewTab("https://github.com/heightcalculator/")
+                        document.getElementById("github-window").style.display = 'none';
                         foundMatch = true;
                     }
 
@@ -1553,14 +1562,41 @@
                     });
 
                     // Search Bing (basic check - you can refine this)
-                    if ("bing".includes(searchTerm)) {
+                    if (["bing", "search", "browser"].includes(searchTerm)) {
                         document.getElementById('bing-window').style.display = 'flex';
                         document.getElementById('bing-window').style.zIndex = currentZIndex++;
                         foundMatch = true;
                     }
 
+                    if (["magic", "tricks", "cards"].includes(searchTerm)) {
+                        openNewTab("https://aarushmagic.com")
+                        foundMatch = true;
+                    }
+
+                    if (["sundial"].includes(searchTerm)) {
+                        openNewTab("https://sundial.aarushmagic.com/make/two")
+                        foundMatch = true;
+                    }
+
+                    if (["rsa", "encryption", "encrypter", "key"].includes(searchTerm)) {
+                        openNewTab("https://rsa.aarushmagic.com/preview")
+                        foundMatch = true;
+                    }
+
+                    if (["font", "handwriting"].includes(searchTerm)) {
+                        openNewTab("https://fonts.aarushmagic.com")
+                        foundMatch = true;
+                    }
+
                     if (!foundMatch) {
-                        alert(`No results found for "${searchInput.value}"`);
+                        searchInput.style.color = "red"
+                        setTimeout(() => {
+                            searchInput.style.color = "#555";
+                        }, "500");
+                        console.log(`No results found for "${searchInput.value}"`);
+
+                    } else {
+                        searchInput.value = ""
                     }
                 }
             });
@@ -1610,8 +1646,6 @@
                 const startingDayOfWeek = firstDayOfMonth.getDay(); // 0 (Sun) - 6 (Sat)
                 const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
 
-                console.log("First day of month:", firstDayOfMonth, "Starting day of week:", startingDayOfWeek, "Days in month:", daysInMonth); // Debugging logs
-
                 // Add empty days for the start of the month to align with the correct weekday
                 for (let i = 0; i < startingDayOfWeek; i++) {
                     const emptyDay = document.createElement('span');
@@ -1629,7 +1663,6 @@
                     }
                     calendarDays.appendChild(dayElement);
                 }
-                console.log("Calendar HTML after generation:", calendarDays.outerHTML); // Debugging log - inspect calendar HTML
             }
 
             generateCalendar();
@@ -1656,9 +1689,9 @@
                         const response = await fetch('https://api.ipify.org?format=json'); // Fetch IP
                         const data = await response.json();
                         const ipAddress = data.ip;
-                        wifiTooltipText.textContent = `WiFi: Connected\nIP Address: ${ipAddress}`;
+                        wifiTooltipText.textContent = `WiFi: ${ipAddress}`;
                     } catch (error) {
-                        wifiTooltipText.textContent = 'WiFi: Connected\nIP Address: Not Available';
+                        wifiTooltipText.textContent = 'WiFi: Not Available';
                         console.error("Error fetching IP address:", error); // Log errors for debugging
                     }
                 });
@@ -1677,7 +1710,7 @@
                         .then(data => {
                             const city = data.address.city || data.address.town || data.address.village || 'Unknown City';
                             const region = data.address.state || data.address.country || 'Unknown Region';
-                            locationTooltipText.textContent = `Location: Approximate\nCity: ${city}\nRegion: ${region}`;
+                            locationTooltipText.textContent = `Location: ${city}, ${region}`;
                         })
                         .catch(error => {
                             locationTooltipText.textContent = 'Location: Error getting location';
@@ -1696,12 +1729,20 @@
                 navigator.getBattery().then(battery => {
                     function updateBatteryInfo() {
                         const batteryLevel = Math.round(battery.level * 100);
-                        batteryTooltipText.textContent = `Battery: ${batteryLevel}% - ${battery.charging ? 'Charging' : 'Discharging'}`;
+                        batteryTooltipText.textContent = `Battery: ${batteryLevel}% - ${battery.charging ? 'Charging' : ''}`;
                         const batteryIconElement = batteryIcon.querySelector('i'); // Get the <i> element
                         if (batteryIconElement) { // Check if the <i> element exists to avoid errors
-                            batteryIconElement.className = battery.charging ? 'fas fa-battery-charging' : (batteryLevel > 20 ? 'fas fa-battery-full' : 'fas fa-battery-quarter'); // Example icon change
-                        } else {
-                            console.error("Battery icon element (<i>) not found!"); // Log if icon element is missing
+                            if (batteryLevel > 87) {
+                                batteryIconElement.className = 'fas fa-battery-full'
+                            } else if (batteryLevel > 62) {
+                                batteryIconElement.className = "fa-solid fa-battery-three-quarters"
+                            } else if (batteryLevel > 37) {
+                                batteryIconElement.className = "fa-solid fa-battery-half"
+                            } else if (batteryLevel > 12) {
+                                batteryIconElement.className = "fa-solid fa-battery-quarter"
+                            } else {
+                                batteryIconElement.className = "fa-solid fa-battery-empty"
+                            }
                         }
                     }
                     updateBatteryInfo();
@@ -1824,7 +1865,7 @@
             getRecentCommitDescriptions().then(descriptions => {
                 commitsArr = descriptions;
                 displayNotifications(descriptions);
-            }); 
+            });
 
             function displayNotifications(commits) {
                 notificationList.innerHTML = ''; // Clear existing notifications
