Improved user accessibility

--- a/bing-iframe.html
+++ b/bing-iframe.html
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <iframe style="display:none" class="viewport-container" src="https://bing.com/search?q=" id="theiframe"></iframe>
+    <iframe style="display:none" class="viewport-container" src="" id="theiframe"></iframe>
     <script>
         document.getElementById("srchButton").addEventListener("click", () => {
             document.getElementById("theiframe").src = "https://bing.com/search?q=" + document.getElementById("srchField").value
