--- a/index.html
+++ b/index.html
@@ -817,11 +817,11 @@
                     <div title="Aarush Magic" class="taskbar-icon" id="magicButton">
                         <i class="fa-solid fa-wand-magic-sparkles"></i>
                     </div>
-                    <div title="Sundial Maker" class="taskbar-icon" id="sundialButton">
-                        <i class="fa-regular fa-clock"></i>
-                    </div>
                     <div title="RSA Ecnryption" class="taskbar-icon" id="rsaButton">
                         <i class="fa-solid fa-fingerprint"></i>
+                    </div>
+                    <div title="Sundial Maker" class="taskbar-icon" id="sundialButton">
+                        <i class="fa-regular fa-clock"></i>
                     </div>
                     <div title="Font Maker" class="taskbar-icon" id="fontButton">
                         <i class="fa-solid fa-signature"></i>
@@ -1092,7 +1092,7 @@
                 </div>
                 <div class="window-content">
                     <iframe id="generic-iframe" src=""
-                        sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-modals allow-top-navigation-by-user-activation allow-downloads"
+                        sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-modals  allow-downloads"
                         allow="geolocation"></iframe>
                 </div>
                 <div class="window-resize-handle window-resize-nw"></div>
@@ -1510,7 +1510,11 @@
                 windowElement.style.zIndex = currentZIndex++;
             })
             document.getElementById("sundialButton").addEventListener('click', () => {
-                openNewTab("https://sundial.aarushmagic.com/make/two")
+                document.getElementById("generic-iframe").src = "https://sundial.aarushmagic.com/make/two"
+                document.getElementById("generic-window-title").innerHTML = "Sundial Maker";
+                const windowElement = document.getElementById("generic-window");
+                windowElement.style.display = 'flex';
+                windowElement.style.zIndex = currentZIndex++;
             });
             document.getElementById("fontButton").addEventListener('click', () => {
                 iframeToOpen = document.getElementById("generic-iframe")
@@ -1674,7 +1678,13 @@
                     }
 
                     if (["sundial"].includes(searchTerm)) {
-                        openNewTab("https://sundial.aarushmagic.com/make/two")
+                        iframeToOpen = document.getElementById("generic-iframe")
+                        document.getElementById("generic-iframe").src = "https://sundial.aarushmagic.com/make/two"
+                        document.getElementById("generic-window-title").innerHTML = "Sundial Maker"
+                        const windowElement = document.getElementById("generic-window");
+                        windowElement.style.display = 'flex';
+                        windowElement.style.zIndex = currentZIndex++;
+                        foundMatch = true;
                     }
 
                     if (["rsa", "encryption", "encrypter", "key"].includes(searchTerm)) {
