--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
                 const args = parts.slice(1);
                 switch (baseCommand) {
                     case 'help':
-                        printToTerminal('Available commands:\nhelp: Bring up the help menu\nclear: Clear the terminal screen\necho: Write arguments to the standard output\ndate: Get current date and time\nwhoami: Display information about Aarush\nls: List directory contents\ncd [dir]: Change working directory\npwd: Return working directory\nrestart: Restart the page\nshutdown: Close all related pages\nfullscreen: Full screen the window\nopenurl [url]: Open a url in window (Note: not all urls may open)');
+                        printToTerminal('Available commands:\nhelp: Bring up the help menu\nclear: Clear the terminal screen\necho: Write arguments to the standard output\ndate: Get current date and time\nwhoami: Display information about Aarush\nls: List directory contents\ncd [dir]: Change working directory\npwd: Return working directory\nrm files: Remove files/directories\nrestart: Restart the page\nshutdown: Close all related pages\nfullscreen: Full screen the window\nopenurl [url]: Open a url in window (Note: not all urls may open)');
                         break;
                     case 'clear':
                         terminalOutput.innerHTML = '';
