--- a/index.html
+++ b/index.html
@@ -130,20 +130,7 @@
                         <span class="window-close" data-window="resume-window"><i class="fas fa-times"></i></span>
                     </div>
                 </div>
-                <div class="pdf-viewer-controls">
-                    <button class="pdf-viewer-button" id="zoom-in"><i class="fas fa-plus"></i></button>
-                    <button class="pdf-viewer-button" id="zoom-out"><i class="fas fa-minus"></i></button>
-                    <button class="pdf-viewer-button" id="zoom-reset"><i class="fas fa-undo"></i></button>
-                </div>
-                <div class="window-content">
-                    <canvas id="resume-pdf-canvas"></canvas>
-                </div>
-                <div class="window-resize-handle window-resize-nw"></div>
-                <div class="window-resize-handle window-resize-ne"></div>
-                <div class="window-resize-handle window-resize-se"></div>
-                <div class="window-resize-handle window-resize-sw"></div>
-                <div class="window-resize-handle window-resize-n"></div>
-                <div class="window-resize-handle window-resize-s"></div>
+                <iframe src="files/resume.pdf" id="resumeIframe"></iframe>
                 <div class="window-resize-handle window-resize-e"></div>
                 <div class="window-resize-handle window-resize-w"></div>
             </div>
@@ -317,6 +304,7 @@
                 <div class="window-resize-handle window-resize-se"></div>
                 <div class="window-resize-handle window-resize-sw"></div>
                 <div class="window-resize-handle window-resize-n"></div>
+                <div class="window-resize-handle window-resize-s"></div>
                 <div class="window-resize-handle window-resize-e"></div>
                 <div class="window-resize-handle window-resize-w"></div>
             </div>
