Restricted 3rd party cookies

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Aarush Lanjharia</title>
     <meta name="description" content="Welcome to Aarush Lanjharia's portfolio page!">
     <link rel="icon" type="image/x-icon" href="/files/favicon.ico">
-    <link defer rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    <link defer rel="stylesheet" data-cookiescript="accepted" data-cookiecategory="functionality"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="files/desktop.css" />
@@ -318,7 +319,6 @@
         </div>
     </div>
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
     <script defer src="files/desktop.js"></script>
 </body>
 
