Improving location access

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Aarush Lanjharia</title>
     <meta name="description" content="Welcome to Aarush Lanjharia's portfolio page!">
     <link rel="icon" type="image/x-icon" href="/files/favicon.ico">
-    <link defer rel="stylesheet" data-cookiescript="accepted" data-cookiecategory="functionality"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link defer rel="preload" data-cookiescript="accepted" data-cookiecategory="functionality"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" as="style"
+        crossorigin="anonymous" referrerpolicy="no-referrer" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+        <link defer rel="stylesheet" data-cookiescript="accepted" data-cookiecategory="functionality"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+            integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </noscript>
     <link rel="stylesheet" href="files/desktop.css" />
 </head>
 <!-- Google tag (gtag.js) -->
