Improving page load

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
     </noscript>
     <link rel="stylesheet" href="files/desktop.css" />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJEBR03EQJ"></script>
