--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <span class="window-close" data-window="resume-window"><i class="fas fa-times"></i></span>
                     </div>
                 </div>
-                <iframe src="files/resume.pdf" id="resumeIframe"></iframe>
+                <iframe src="" id="resumeIframe"></iframe>
                 <div class="window-resize-handle window-resize-e"></div>
                 <div class="window-resize-handle window-resize-w"></div>
             </div>
