--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2>LinkedIn Profile</h2>
                     <p>Link to your LinkedIn profile:</p>
                     <p>Keywords for search: linkedin, professional, network, profile</p>
-                    <a href="https://www.linkedin.com/in/aarush-lanjharia-065216228/" target="_blank">Visit my LinkedIn
+                    <a href="https://www.linkedin.com/in/aarushl/" target="_blank">Visit my LinkedIn
                         Profile</a>
                 </div>
                 <div class="window-resize-handle window-resize-nw"></div>
