Updated Discord Link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <h2>GitHub Profile</h2>
                     <p>Link to your GitHub profile:</p>
                     <p>Keywords for search: github, code, repository, projects, development</p>
-                    <a href="https://github.com/heightcalculator/" target="_blank">Visit my GitHub Profile</a>
+                    <a href="https://github.com/aarushmagic/" target="_blank">Visit my GitHub Profile</a>
                 </div>
                 <div class="window-resize-handle window-resize-nw"></div>
                 <div class="window-resize-handle window-resize-ne"></div>
